--- a/margin.html
+++ b/margin.html
@@ -8,9 +8,12 @@
         div{
             width: 400px;
             height: 400px;
-            border: 1px solid rgb(0, 217, 255);
-            
+            border: 10px solid rgb(0, 217, 255);
+            margin: 10px 20px 30px 40px; 
+           margin:10px; 
             padding: 10px;
+            border-top: 50
+        ;
             box-sizing: border-box;
         }
     </style>
