--- a/icon.html
+++ b/icon.html
@@ -1,59 +1,98 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-<style>
-body{
- display: flex;
- align-items: center;
-justify-content: center;
-height: 100vh;
-}
-i{
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
+        integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <style>
+        body {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+        }
 
-font-size: 50px;
-color: aqua;
-padding: 10px;
-transition: all .5s ease;
-}
-i:hover{
-    background-color: aqua;
-    color: beige;
- transform: scale(1.2);
-}
-#yt{
-    color: red;
-    &:hover{
-        background-color: red;
-        color: white;
-    }
-}
-#tt{
-color: rgb(0, 0, 0);
-    &:hover{
-        background-color: rgb(0, 0, 0);
-        color: white;
+        i {
 
-}
-#gh {
-color: rgb(248, 248, 248);
-    &:hover{
-        background-color: rgb(0, 0, 0);
-        color: white;
+            font-size: 50px;
+            color: aqua;
+            padding: 10px;
+            transition: all .5s ease;
+        }
 
-}
+        i:hover {
+            background-color: aqua;
+            color: beige;
+            transform: scale(1.2);
+        }
 
-</style>
+        #yt {
+            color: red;
+
+            &:hover {
+                background-color: red;
+                color: white;
+            }
+        }
+
+        #tt {
+            color: rgb(0, 0, 0);
+
+            &:hover {
+                background-color: rgb(0, 0, 0);
+                color: white;
+
+            }
+        }
+            #gt {
+                color: black;
+
+                &:hover {
+                    background-color: black;
+                    color: white;
+                }
+            }
+
+            #mu {
+                color: rgb(0, 0, 0);
+
+                &:hover {
+                    background-color: rgb(0, 0, 0);
+                    color: white;
+                }}
+       #rt {
+                color: rgb(0, 0, 0);
+
+                &:hover {
+                    background-color: rgb(0, 0, 0);
+                    color: white;
+                }}        
+    </style>
 
 </head>
+
 <body>
-    <a href="https://www.youtube.com"></a><i id="yt" class="fa-brands fa-youtube"></i>
-     <a href="https://www.tiktok.com"></a><i id="tt" class="fa-brands fa-tiktok"></i>
-     <a href="https://www.github.com"></a><i id="gh" class="fa-brands fa-github"></i>
-     <a href="https://www.music.com"></a><i class="fa-solid fa-music"></i>
-     <a href="https://www.restroom.com"></a><i class="fa-solid fa-restroom"></i>
+    <a href="https://www.youtube.com">
+        <i id="yt" class="fa-brands fa-youtube"></i>
+    </a>
+    <a href="https://www.tiktok.com">
+        <i id="tt" class="fa-brands fa-tiktok"></i>
+    </a>
+    <a href="https://www.github.com">
+        <i id="gt" class="fa-brands fa-github"></i>
+    </a>
+    <a href="https://www.music.com">
+    <i id="mu" class="fa-solid fa-music"></i>
+    </a>
+
+    <a href="https://www.restroom.com">
+    <i id="rt" class="fa-solid fa-restroom"></i>
+    </a>
+
 </body>
+
 </html>
